@@ -13,8 +13,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/sessions")
@@ -22,7 +20,6 @@ import java.util.stream.Collectors;
 public class ReadingSessionController {
 
     private final ReadingSessionService sessionService;
-    private final StreakService streakService;
     private final ReadingSessionMapper sessionMapper;
 
     @PostMapping("/start")
@@ -79,24 +76,8 @@ public class ReadingSessionController {
         List<ReadingSessionDto> sessions = sessionService.getSessionsByBook(user, bookId)
                 .stream()
                 .map(sessionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(sessions);
     }
 
-    @GetMapping("/streak")
-    public ResponseEntity<Map<String, Integer>> getStreak(
-            @CurrentUser User user,
-            @RequestHeader(value = "X-Timezone", required = false) String timezone) {
-        java.time.ZoneId zoneId;
-        try {
-            zoneId = timezone != null ? java.time.ZoneId.of(timezone) : java.time.ZoneOffset.UTC;
-        } catch (java.time.DateTimeException e) {
-            zoneId = java.time.ZoneOffset.UTC;
-        }
-        StreakService.StreakInfo streakInfo = streakService.calculateStreaks(user, zoneId);
-        return ResponseEntity.ok(Map.of(
-                "currentStreak", streakInfo.current(),
-                "longestStreak", streakInfo.longest()
-        ));
-    }
 }
